erDiagram
    PERSONA ||--o{ LEGAJO : tiene
    PERSONA {
        Long uniqueId PK
        BigDecimal personaId
        Integer documentoId
        String apellido
        String nombre
        String sexo
        Integer profesionId
        String mascara
    }
    LEGAJO ||--o{ INSCRIPCION : registra
    LEGAJO {
        Long legajoId PK
        BigDecimal personaId
        Integer documentoId
        Integer facultadId
        Long numeroLegajo
    }
    INSCRIPCION ||--|{ INSCRIPCION_DETALLE : contiene
    INSCRIPCION {
        Long inscripcionId PK
        Integer facultadId
        Integer lectivoId
    }
    INSCRIPCION_DETALLE {
        Long detalleId PK
        Long inscripcionId FK
        Integer materiaId
    }
    PERSONA ||--o| DOMICILIO : reside
    DOMICILIO {
        Long domicilioId PK
        BigDecimal personaId
        Integer documentoId
    }
    INSCRIPCION ||--o{ INSCRIPCION_PAGO : tiene
    INSCRIPCION_PAGO {
        Long inscripcionPagoId PK
        BigDecimal personaId
        Integer documentoId
        Integer facultadId
        Integer lectivoId
        BigDecimal personaIdPagador
        Integer documentoIdPagador
    }
    TESORERIA_ESTADO {
        Long tesoreriaEstadoId PK
        Integer facultadId
        BigDecimal personaId
        Integer documentoId
        BigDecimal deuda
        Byte manual
        Byte importado
        String observaciones
        OffsetDateTime fechaTope
        String uuid
    }